--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,7 +66,14 @@ android {
 flutter {
     source '../..'
 }
+// plugins {
+//   id("com.android.application")
 
+//   // Add the Google services Gradle plugin
+//   id("com.google.gms.google-services")
+
+//   }
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
 }
