--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   google_sign_in: ^6.1.5
   firebase_auth: ^4.10.0
   firebase_core: ^2.16.0
+  firebase_storage: ^11.2.7
+  file_picker: ^5.5.0
+  firebase_database: ^10.2.7
 
 dev_dependencies:
   flutter_test:
